# knowledge-base

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/application/: __init__.py
backend/app/application/interfaces/: __init__.py  article_repository.py  chat_provider.py  chat_request_log_repository.py  chunk_repository.py  client_record_repository.py  data_source_repository.py  embedding_provider.py  file_repository.py  llm_client.py  ontology_repository.py  processing_job_repository.py  resource_repository.py  service_request_log_repository.py  text_extractor.py
backend/app/config/: parent_inference_rules.yaml
backend/app/domain/: __init__.py  exceptions.py
backend/app/infrastructure/: __init__.py  dependencies.py
backend/app/presentation/: __init__.py
backend/data/: embedded-types.yaml  settings.json
backend/data/l1/: foundation.yaml  mixins.yaml  ontology.yaml
backend/data/l2/: artifacts.yaml  domain-knowledge.yaml  entities.yaml  processes.yaml
backend/docs/: pdf-verwerking-gids.md
backend/tests/integration/: test_health.py  test_query_metadata_search.py  test_website_capture_cookie_handling.py
backend/tests/unit/: test_article_service.py  test_chat_completion_service.py  test_classification_service.py  test_config_settings.py  test_file_processing.py  test_metadata_extraction.py  test_ontology.py  test_ontology_type_assistant_service.py  test_openrouter_client.py  test_openrouter_extract_json.py  test_query_service.py
docs/: architectuur.md  (+18 more)
(+164 files in other folders)
